# zodb-pgjsonb

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: tests.yaml
benchmarks/: bench.py  bench_plone.py  results.json
example/: README.md  docker-compose.yml  requirements.txt  zope.conf  zope.ini
src/zodb_pgjsonb/: __init__.py  blobs.py  component.xml  config.py  interfaces.py  invalidation.py  objects.py  packer.py  schema.py  storage.py
tests/: conftest.py  test_blob_migration.py  test_blobs.py  test_config.py  test_conflict.py  test_conformance.py  test_history.py  test_iteration.py  test_mvcc.py  test_packer.py  test_refs.py  test_roundtrip.py  test_security.py  test_state_processor.py  test_storage.py  test_stress.py
